# PHES_Searching

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README  README.md  build.sh  example_variables  process_count  processes  storage_location  task_generator.py  tasks  variables
docker/: Dockerfile
docs/: PHES_Searching.md  _config.yml  index.md  input.md  running.md
documentation/: How to use PHES searching software.docx  ~$w to use PHES searching software.docx
input/countries/: countries.txt
src/: CMakeLists.txt  TIFF_IO.cpp  TIFF_IO.h  constructor.cpp  constructor_helpers.cpp  constructor_helpers.hpp  convert_to_shp.cpp  coordinates.cpp  coordinates.h  csv.cpp  csv.h  depression_volume_finding.cpp  fsolve.cpp  fsolve.hpp  gpkg_tiling.cpp  json.cpp  json.hpp  kml.cpp  kml.h  mining_pits.cpp  mining_pits.h  model2D.cpp  model2D.h  pairing.cpp  phes_base.cpp  phes_base.h  polygons.cpp  polygons.h  pretty_set.cpp  reservoir.cpp  reservoir.h  reservoir_constructor.cpp  screening.cpp  search_config.cpp  search_config.hpp  search_driver.cpp  shapefile_tiling.cpp  variable_parser.cpp
task_lists/: ASEAN_tasks  MY_tasks  aus_existing_tasks.txt  aus_tasks.txt  world_tasks.txt  world_tasks_fabdem.txt  world_tasks_srtm.txt
tools/: TN_debugging.cpp  create_layers.py  group_kmls.py  merge_shp_to_gpkg.sh  osm_mine_downloader.py  output_summary.py  publish_layers.py  raster_as_matrix.py  reseed_heatmaps.sh  reseed_phes.sh  reset.sh  shapefile_to_dems.py  split_kml.py  update_database.sh  update_heatmaps.py  update_map_server.py  upload_heatmaps.sh  world_urban_downloader.py  write_to_postgres.sh  write_to_simple_json.py
